--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\jamie\\miniconda3\\envs\\mixed\\python.exe"
+    "python.pythonPath": "C:\\Users\\jamie\\miniconda3\\envs\\PySMSIM\\python.exe"
 }
